- Added more comments - code clean up

--- a/BostonData.ipynb
+++ b/BostonData.ipynb
@@ -32,7 +32,6 @@
     "# note: if you call \"boston = load_boston()\", it returns a dictionary-like object\n",
     "data, target = datasets.load_boston(True)\n",
     "\n",
-    "\n",
     "# Split the data into two parts: training data and testing data\n",
     "train_data,test_data,train_target,test_target = train_test_split(data,(target[:, np.newaxis]), test_size=0.2, random_state=42)"
    ]
@@ -63,7 +62,7 @@
     }
    ],
    "source": [
-    "# SOURCES\n",
+    "# Sources\n",
     "\n",
     "# http://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LinearRegression.html#sklearn.linear_model.LinearRegression\n",
     "# http://scikit-learn.org/stable/auto_examples/linear_model/plot_ols.html\n",
@@ -76,18 +75,24 @@
     "# http://scikit-learn.org/stable/auto_examples/linear_model/plot_ols.html\n",
     "\n",
     "# functions\n",
+    "\n",
+    "# Square error function\n",
     "def sqrMean(X, Y):\n",
     "    return (np.mean((X - Y) ** 2)) / 2\n",
     "\n",
+    "# convert 2d array to matrix\n",
     "def getMatrix(input):\n",
     "    return np.matrix(input)\n",
     "    \n",
+    "# convert list to vector\n",
     "def getVector(input):\n",
     "    return np.array(input)\n",
     "    \n",
+    "# get transpose of matrix\n",
     "def getTranspose(input):\n",
     "    return np.transpose(input)\n",
     "\n",
+    "# loss function\n",
     "def loss(N, features, targets, weights):\n",
     "    t = getVector(targets)\n",
     "    X = getMatrix(features)\n",
@@ -107,42 +112,42 @@
     "# fitting model with training X,Y data. We are training the model with the training data at this time\n",
     "model.fit(train_data, train_target)\n",
     "\n",
-    "# Task 1-2: show intercept and coefficents\n",
+    "# Task 1-2: show intercept and coefficients\n",
     "print()\n",
     "print('Coefficients: ', model.coef_)\n",
     "print()\n",
     "print('Intercepts: ', model.intercept_)\n",
     "\n",
-    "# Here we are getting a prediction \n",
+    "# Here we are getting a prediction using the training data\n",
     "trained_results = model.predict(train_data)\n",
     "\n",
-    "# Here we are getting a prediction \n",
+    "# Here we are getting a prediction using the testing data\n",
     "tested_results = model.predict(test_data)\n",
     "\n",
-    "# get error value from both data sets \n",
-    "#train_error = metrics.mean_squared_error(train_target, results)\n",
-    "#test_error = metrics.mean_squared_error(test_target, results)\n",
+    "# get error from both data sets \n",
     "train_error = sqrMean(train_target, trained_results)\n",
     "test_error = sqrMean(test_target, tested_results)\n",
     "\n",
     "# Task 1-3: show errors on training dataset and testing dataset\n",
+    "\n",
+    "# Print out both data sets error based on model fitted using the training data\n",
     "print()\n",
     "print('Training Error: ', train_error)\n",
     "print('Testing Error: ', test_error)\n",
     "\n",
-    "# Task 1-4: show plot a figure to show your predictions and real prices on the testing dataset\n",
+    "# Task 1-4: show plot a figure to show your predictions and real prices on the testing data set\n",
+    "\n",
+    "# set x axis label\n",
     "plt.xlabel(\"Target\")\n",
+    "# set y axis label\n",
     "plt.ylabel(\"Predicted Target\")\n",
+    "# set chart title\n",
     "plt.title(\"Target prices vs Predicted prices\")\n",
-    "# plt.plot(test_target, test_target, 'r--', tested_results, tested_results, 'bs')\n",
-    "#plt.plot(np.matrix(test_data), model.predict(np.matrix(test_data)))\n",
-    "# plt.plot(model.predict(np.matrix(test_data)))\n",
-    "# plt.plot(np.matrix(test_data))\n",
+    "# plot the predicted values of the test data\n",
     "plt.plot(model.predict(np.matrix(test_data)))\n",
+    "# plot the true values of the test data\n",
     "plt.plot(np.matrix(test_target))\n",
-    "# plt.scatter(test_target, tested_results,  color='black')\n",
-    "#plt.xticks(())\n",
-    "#plt.yticks(())\n",
+    "# show the chart\n",
     "plt.show()"
    ]
   },
@@ -156,6 +161,9 @@
     "# Inputs: Training data and training label\n",
     "# Output: Weights\n",
     "def myNormalEqualFun(X,y):\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    return \n",
     "    \n",
     "# Task 2-2: Implement a function performing prediction\n",
